--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -187,6 +187,9 @@
     "Activities": "Aktivitäten",
     "Activity Types": "Aktivitätstypen",
     "Priority level & Activity status": "Prioritätsstufe & Aktivitätsstatus",
+    "Leads and Potentials": "Leads en Potentiëlen",
+    "Lead Sources & Statuses": "Lead Bronnen & Statussen",
+    "Leads": "Leads",
     "general": "Allgemein",
     "life_ind": "Leben individuell",
     "life_group": "Leben Gruppe",
@@ -235,7 +238,11 @@
     "confirm_delete": "Löschen bestätigen",
     "are_you_sure": "Bist du sicher?",
     "cancel": "Abbrechen",
-    "delete": "Löschen"
+    "delete": "Löschen",
+    "lead_sources": "Lead Bronnen",
+    "no_lead_source_found": "Geen Lead Bron gevonden",
+    "lead_statuses": "Lead Statussen",
+    "no_lead_status_found": "Geen Lead Status gevonden"
   },
   "entities": {
     "account_number": "Kontonummer",
@@ -890,127 +897,127 @@
       "fee_amount": "Gebührenbetrag",
 
       "import_schedule": "Importplan",
-    "from_csv_file": "Aus CSV-Datei",
-    "from_another_policy": "Aus einer anderen Police",
-    "export_template": "Vorlage exportieren",
-    "upload_template": "Vorlage hochladen",
-    "underwriting_policy_summary": "Underwriting: Polizzensumme",
-    "client_dd_details": "Kunden-DD-Details",
-    "policy_taxes": "Policensteuern",
-    "policy_clauses": "Policen-Klauseln",
-    "policy_subclasses_clauses": "Policen-Unterklassen-Klauseln",
-    "policy_level_perils": "Policen-Gefahrenstufen",
-    "policy_remarks": "Policen-Bemerkungen",
-    "limits_of_liability": "Haftungshöchstgrenzen",
-    "external_claim_exp": "Externe Schadenkosten",
-    "internal_claim_exp": "Interne Schadenkosten",
-    "service_providers": "Dienstleister",
-    "Reasons for pending": "Gründe für ausstehend",
-    "insureds": "Versicherte",
-    "Name": "Name",
-    "address": "Adresse",
-    "town": "Stadt",
-    "pin": "PLZ",
-    "passport_no": "Reisepass-Nr.",
-    "business": "Geschäft",
-    "risk-note": "Risikohinweis",
-    "description": "Beschreibung",
-    "binder_name": "Binder-Name",
-    "uw-year": "Underwriting-Jahr",
-    "Premium": "Prämie",
-    "schedule_details": "Pläne-Details",
-    "reg_no": "Reg.-Nr.",
-    "vehicle_make": "Fahrzeugmarke",
-    "cubic_capacity": "Hubraum",
-    "year_of_manufacture": "Baujahr",
-    "seating_capacity": "Sitzplatzkapazität",
-    "value": "Wert",
-    "body_type": "Karosserietyp",
-    "premium_items": "Prämienartikel",
-    "risk_sections": "Risikobereiche",
-    "save_details": "Details speichern",
-    "group": "Gruppe",
-    "row_no": "Zeilennummer",
-    "short_desc": "Kurzbeschreibung",
-    "limit_amount": "Betragsgrenze",
-    "premium_rate": "Prämienrate",
-    "div_factor": "Div-Faktor",
-    "id": "ID",
-    "rate_type": "Ratentyp",
-    "premium_type": "Prämientyp",
-    "free_limit": "Freigrenze",
-    "div_by": "Geteilt durch",
-    "multi_rate": "Mehrfachrate",
-    "div-multi_by": "Div-Multi durch",
-    "min_premium": "Mindestprämie",
-    "accumulation": "Akkumulation",
-    "remarks": "Bemerkungen",
-    "declaration": "Erklärung",
-    "compute": "Berechnen",
-    "dual_basis": "Duale Basis",
-    "indemnity_period_units": "Entschädigungszeiteinheiten",
-    "first_indemnity": "Erste Entschädigung",
-    "indemnity_remainder_period": "Restliche Entschädigungsperiode",
-    "email_pct": "E-Mail-Prozentsatz",
-    "loc_division_factor": "Standort-Teilungsfaktor",
-    "top_loc_rate": "Höchster Standort-Satz",
-    "clear": "Löschen",
-    "risk_clauses": "Risiko-Klauseln",
-    "header": "Überschrift",
-    "clause": "Klausel",
-    "editable": "Editierbar",
-    "type": "Typ",
-    "required_documents": "Erforderliche Dokumente",
-    "submitted": "Eingereicht",
-    "date_submitted": "Eingereichtes Datum",
-    "ref_no": "Referenznummer",
-     "risk_note": "Risikohinweis",
-    "uw_year": "Underwriting-Jahr",
+      "from_csv_file": "Aus CSV-Datei",
+      "from_another_policy": "Aus einer anderen Police",
+      "export_template": "Vorlage exportieren",
+      "upload_template": "Vorlage hochladen",
+      "underwriting_policy_summary": "Underwriting: Polizzensumme",
+      "client_dd_details": "Kunden-DD-Details",
+      "policy_taxes": "Policensteuern",
+      "policy_clauses": "Policen-Klauseln",
+      "policy_subclasses_clauses": "Policen-Unterklassen-Klauseln",
+      "policy_level_perils": "Policen-Gefahrenstufen",
+      "policy_remarks": "Policen-Bemerkungen",
+      "limits_of_liability": "Haftungshöchstgrenzen",
+      "external_claim_exp": "Externe Schadenkosten",
+      "internal_claim_exp": "Interne Schadenkosten",
+      "service_providers": "Dienstleister",
+      "Reasons for pending": "Gründe für ausstehend",
+      "insureds": "Versicherte",
+      "Name": "Name",
+      "address": "Adresse",
+      "town": "Stadt",
+      "pin": "PLZ",
+      "passport_no": "Reisepass-Nr.",
+      "business": "Geschäft",
+      "risk-note": "Risikohinweis",
+      "description": "Beschreibung",
+      "binder_name": "Binder-Name",
+      "uw-year": "Underwriting-Jahr",
+      "Premium": "Prämie",
+      "schedule_details": "Pläne-Details",
+      "reg_no": "Reg.-Nr.",
+      "vehicle_make": "Fahrzeugmarke",
+      "cubic_capacity": "Hubraum",
+      "year_of_manufacture": "Baujahr",
+      "seating_capacity": "Sitzplatzkapazität",
+      "value": "Wert",
+      "body_type": "Karosserietyp",
+      "premium_items": "Prämienartikel",
+      "risk_sections": "Risikobereiche",
+      "save_details": "Details speichern",
+      "group": "Gruppe",
+      "row_no": "Zeilennummer",
+      "short_desc": "Kurzbeschreibung",
+      "limit_amount": "Betragsgrenze",
+      "premium_rate": "Prämienrate",
+      "div_factor": "Div-Faktor",
+      "id": "ID",
+      "rate_type": "Ratentyp",
+      "premium_type": "Prämientyp",
+      "free_limit": "Freigrenze",
+      "div_by": "Geteilt durch",
+      "multi_rate": "Mehrfachrate",
+      "div-multi_by": "Div-Multi durch",
+      "min_premium": "Mindestprämie",
+      "accumulation": "Akkumulation",
+      "remarks": "Bemerkungen",
+      "declaration": "Erklärung",
+      "compute": "Berechnen",
+      "dual_basis": "Duale Basis",
+      "indemnity_period_units": "Entschädigungszeiteinheiten",
+      "first_indemnity": "Erste Entschädigung",
+      "indemnity_remainder_period": "Restliche Entschädigungsperiode",
+      "email_pct": "E-Mail-Prozentsatz",
+      "loc_division_factor": "Standort-Teilungsfaktor",
+      "top_loc_rate": "Höchster Standort-Satz",
+      "clear": "Löschen",
+      "risk_clauses": "Risiko-Klauseln",
+      "header": "Überschrift",
+      "clause": "Klausel",
+      "editable": "Editierbar",
+      "type": "Typ",
+      "required_documents": "Erforderliche Dokumente",
+      "submitted": "Eingereicht",
+      "date_submitted": "Eingereichtes Datum",
+      "ref_no": "Referenznummer",
+      "risk_note": "Risikohinweis",
+      "uw_year": "Underwriting-Jahr",
 
-    "select_risk_clauses": "Risikoklauseln auswählen",
-    "peril": "Gefahr",
-    "limit_description": "Grenzbeschreibung",
-    "person_limit": "Personengrenze",
-    "claim_amount": "Schadensbetrag",
-    "excess_type": "Selbstbehalttyp",
-    "peril_id": "ID",
-    "previous": "Vorherige",
+      "select_risk_clauses": "Risikoklauseln auswählen",
+      "peril": "Gefahr",
+      "limit_description": "Grenzbeschreibung",
+      "person_limit": "Personengrenze",
+      "claim_amount": "Schadensbetrag",
+      "excess_type": "Selbstbehalttyp",
+      "peril_id": "ID",
+      "previous": "Vorherige",
 
-    "select_required_documents": "Erforderliche Dokumente auswählen",
-    "edit_required_documents": "Erforderliche Dokumente bearbeiten",
-    "certificates": "Zertifikate",
-    "select_user_certifacte_iot": "Benutzerzertifikats-Lot auswählen",
-    "cert_no": "Zertifikatsnummer",
-    "lot_id": "Los-ID",
-    "issue_date": "Ausgabedatum",
-    "cert_year": "Zertifikatsjahr",
-    "status": "Status",
-    "print_status": "Druckstatus",
-    "print_date": "Druckdatum",
-    "wef": "Gültig ab",
-    "select_certifiactes": "Zertifikate auswählen",
-    "cert_type": "Zertifikatstyp",
-    "lots_id": "Los-ID",
-    "certificate_details": "Zertifikatsdetails",
-    "certificate": "Zertifikat",
-    "active": "Aktiv",
-    "cancelled": "Storniert",
-    "inactive": "Inaktiv",
-    "wet": "Nass",
-    "remark": "Bemerkung",
-    "created_date": "Erstellungsdatum",
-    "add_remarks": "Bemerkungen hinzufügen",
-    "edit_remarks": "Bemerkungen bearbeiten",
-    "related_risks": "Verwandte Risiken",
-    "property_id": "Eigentums-ID",
-    "commission_transaction": "Provisionsgeschäft",
-    "agent_name": "Agentenname",
-    "account_type": "Kontotyp",
-    "setup_rate": "Einrichtungsrate",
-    "used_rate": "Verwendete Rate",
-    "commission_amount": "Provisionsbetrag",
-    "withholding_rate": "Einbehaltungsrate",
-    "code": "Code"
+      "select_required_documents": "Erforderliche Dokumente auswählen",
+      "edit_required_documents": "Erforderliche Dokumente bearbeiten",
+      "certificates": "Zertifikate",
+      "select_user_certifacte_iot": "Benutzerzertifikats-Lot auswählen",
+      "cert_no": "Zertifikatsnummer",
+      "lot_id": "Los-ID",
+      "issue_date": "Ausgabedatum",
+      "cert_year": "Zertifikatsjahr",
+      "status": "Status",
+      "print_status": "Druckstatus",
+      "print_date": "Druckdatum",
+      "wef": "Gültig ab",
+      "select_certifiactes": "Zertifikate auswählen",
+      "cert_type": "Zertifikatstyp",
+      "lots_id": "Los-ID",
+      "certificate_details": "Zertifikatsdetails",
+      "certificate": "Zertifikat",
+      "active": "Aktiv",
+      "cancelled": "Storniert",
+      "inactive": "Inaktiv",
+      "wet": "Nass",
+      "remark": "Bemerkung",
+      "created_date": "Erstellungsdatum",
+      "add_remarks": "Bemerkungen hinzufügen",
+      "edit_remarks": "Bemerkungen bearbeiten",
+      "related_risks": "Verwandte Risiken",
+      "property_id": "Eigentums-ID",
+      "commission_transaction": "Provisionsgeschäft",
+      "agent_name": "Agentenname",
+      "account_type": "Kontotyp",
+      "setup_rate": "Einrichtungsrate",
+      "used_rate": "Verwendete Rate",
+      "commission_amount": "Provisionsbetrag",
+      "withholding_rate": "Einbehaltungsrate",
+      "code": "Code"
     }
   },
   "lms": {
@@ -1313,7 +1320,6 @@
       "paymentType": "Zahlungsart",
       "bankAccount": "Bankkonto",
       "chequeNo": "Schecknummer",
-      "exciseDuty": "Verbrauchssteuer",
       "payee": "Empfänger",
       "paymentMode": "Zahlungsweise",
       "authorised": "Genehmigt",
