--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -187,6 +187,9 @@
     "Activities": "Shughuli",
     "Activity Types": "Aina za Shughuli",
     "Priority level & Activity status": "Kiwango cha Kipaumbele & Hali ya Shughuli",
+    "Leads and Potentials": "Uongozi na Uwezo",
+    "Lead Sources & Statuses": "Vyanzo vya Uongozi na Hali",
+    "Leads": "Uongozi",
     "general": "Jumla",
     "life_ind": "Bima ya Maisha ya Mtu Binafsi",
     "life_group": "Bima ya Maisha ya Kundi",
@@ -235,7 +238,11 @@
     "confirm_delete": "Thibitisha kufuta",
     "are_you_sure": "Una uhakika?",
     "cancel": "Ghairi",
-    "delete": "Futa"
+    "delete": "Futa",
+    "lead_sources": "Vyanzo vya Uongozi",
+    "no_lead_source_found": "Hakuna Chanzo cha Uongozi kilichopatikana",
+    "lead_statuses": "Hali za Uongozi",
+    "no_lead_status_found": "Hakuna Hali ya Uongozi Iliyopatikana"
   },
   "entities": {
     "account_number": "Nambari ya Akaunti",
@@ -966,53 +973,53 @@
       "submitted": "Imewasilishwa",
       "date_submitted": "Tarehe ya kuwasilishwa",
       "ref_no": "Namba ya kumbukumbu",
-        "risk_note": "Kipande cha hatari",
-    "uw_year": "Mwaka wa uhakiki",
+      "risk_note": "Kipande cha hatari",
+      "uw_year": "Mwaka wa uhakiki",
 
-    "select_risk_clauses": "Chagua vifungu vya hatari",
-  "peril": "Hatari",
-  "limit_description": "Maelezo ya kikomo",
-  "person_limit": "Kikomo cha mtu",
-  "claim_amount": "Kiasi cha dai",
-  "excess_type": "Aina ya ziada",
-  "peril_id": "ID",
-  "previous": "Ya awali",
+      "select_risk_clauses": "Chagua vifungu vya hatari",
+      "peril": "Hatari",
+      "limit_description": "Maelezo ya kikomo",
+      "person_limit": "Kikomo cha mtu",
+      "claim_amount": "Kiasi cha dai",
+      "excess_type": "Aina ya ziada",
+      "peril_id": "ID",
+      "previous": "Ya awali",
 
-  "select_required_documents": "Chagua nyaraka zinazohitajika",
-  "edit_required_documents": "Hariri nyaraka zinazohitajika",
-  "certificates": "Vyeti",
-  "select_user_certifacte_iot": "Chagua cheti cha mtumiaji loti",
-  "cert_no": "Namba ya cheti",
-  "lot_id": "ID ya loti",
-  "issue_date": "Tarehe ya kutolewa",
-  "cert_year": "Mwaka wa cheti",
-  "status": "Hali",
-  "print_status": "Hali ya kuchapisha",
-  "print_date": "Tarehe ya kuchapisha",
-  "wef": "Tarehe ya kuanza",
-  "select_certifiactes": "Chagua vyeti",
-  "cert_type": "Aina ya cheti",
-  "lots_id": "ID za loti",
-  "certificate_details": "Maelezo ya cheti",
-  "certificate": "Cheti",
-  "active": "Inatumika",
-  "cancelled": "Imesitishwa",
-  "inactive": "Haifanyi kazi",
-  "wet": "Tarehe ya kumalizia",
-  "remark": "Maelezo",
-  "created_date": "Tarehe ya kuundwa",
-  "add_remarks": "Ongeza maelezo",
-  "edit_remarks": "Hariri maelezo",
-  "related_risks": "Hatari zinazohusiana",
-  "property_id": "ID ya mali",
-  "commission_transaction": "Muamala wa kamisheni",
-  "agent_name": "Jina la wakala",
-  "account_type": "Aina ya akaunti",
-  "setup_rate": "Kiwango cha usanikishaji",
-  "used_rate": "Kiwango kilichotumika",
-  "commission_amount": "Kiasi cha kamisheni",
-  "withholding_rate": "Kiwango cha kizuizi",
-   "code": "Nambari"
+      "select_required_documents": "Chagua nyaraka zinazohitajika",
+      "edit_required_documents": "Hariri nyaraka zinazohitajika",
+      "certificates": "Vyeti",
+      "select_user_certifacte_iot": "Chagua cheti cha mtumiaji loti",
+      "cert_no": "Namba ya cheti",
+      "lot_id": "ID ya loti",
+      "issue_date": "Tarehe ya kutolewa",
+      "cert_year": "Mwaka wa cheti",
+      "status": "Hali",
+      "print_status": "Hali ya kuchapisha",
+      "print_date": "Tarehe ya kuchapisha",
+      "wef": "Tarehe ya kuanza",
+      "select_certifiactes": "Chagua vyeti",
+      "cert_type": "Aina ya cheti",
+      "lots_id": "ID za loti",
+      "certificate_details": "Maelezo ya cheti",
+      "certificate": "Cheti",
+      "active": "Inatumika",
+      "cancelled": "Imesitishwa",
+      "inactive": "Haifanyi kazi",
+      "wet": "Tarehe ya kumalizia",
+      "remark": "Maelezo",
+      "created_date": "Tarehe ya kuundwa",
+      "add_remarks": "Ongeza maelezo",
+      "edit_remarks": "Hariri maelezo",
+      "related_risks": "Hatari zinazohusiana",
+      "property_id": "ID ya mali",
+      "commission_transaction": "Muamala wa kamisheni",
+      "agent_name": "Jina la wakala",
+      "account_type": "Aina ya akaunti",
+      "setup_rate": "Kiwango cha usanikishaji",
+      "used_rate": "Kiwango kilichotumika",
+      "commission_amount": "Kiasi cha kamisheni",
+      "withholding_rate": "Kiwango cha kizuizi",
+      "code": "Nambari"
     }
   },
   "lms": {
@@ -1315,7 +1322,6 @@
       "paymentType": "Aina ya Malipo",
       "bankAccount": "Akaunti ya Benki",
       "chequeNo": "Nambari ya Hundi",
-      "exciseDuty": "Ushuru",
       "payee": "Mpokeaji",
       "paymentMode": "Njia ya Malipo",
       "authorised": "Imeidhinishwa",
