--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -187,6 +187,9 @@
     "Activities": "Activités",
     "Activity Types": "Types d'Activités",
     "Priority level & Activity status": "Niveau de Priorité & État de l'Activité",
+    "Leads and Potentials": "Leads et Potentiels",
+    "Lead Sources & Statuses": "Sources et Statuts des Leads",
+    "Leads": "Leads",
     "general": "Général",
     "life_ind": "Vie individuelle",
     "life_group": "Vie de groupe",
@@ -235,7 +238,11 @@
     "confirm_delete": "Confirmer la suppression",
     "are_you_sure": "Êtes-vous sûr?",
     "cancel": "Annuler",
-    "delete": "Supprimer"
+    "delete": "Supprimer",
+    "lead_sources": "Sources de Lead",
+    "no_lead_source_found": "Aucune source de Lead trouvée",
+    "lead_statuses": "Statuts des Leads",
+    "no_lead_status_found": "Aucun statut de Lead trouvé"
   },
   "entities": {
     "account_number": "Numéro de compte",
@@ -965,52 +972,52 @@
       "date_submitted": "Date de soumission",
       "ref_no": "Numéro de référence",
       "risk_note": "Note de risque",
-    "uw_year": "Année de souscription",
+      "uw_year": "Année de souscription",
 
-    "select_risk_clauses": "Sélectionner les clauses de risque",
-    "peril": "Péril",
-    "limit_description": "Description de la limite",
-    "person_limit": "Limite par personne",
-    "claim_amount": "Montant de la réclamation",
-    "excess_type": "Type de franchise",
-    "peril_id": "ID",
-    "previous": "Précédent",
+      "select_risk_clauses": "Sélectionner les clauses de risque",
+      "peril": "Péril",
+      "limit_description": "Description de la limite",
+      "person_limit": "Limite par personne",
+      "claim_amount": "Montant de la réclamation",
+      "excess_type": "Type de franchise",
+      "peril_id": "ID",
+      "previous": "Précédent",
 
-    "select_required_documents": "Sélectionner les documents requis",
-    "edit_required_documents": "Modifier les documents requis",
-    "certificates": "Certificats",
-    "select_user_certifacte_iot": "Sélectionner le lot de certificats utilisateur",
-    "cert_no": "N° de certificat",
-    "lot_id": "ID du lot",
-    "issue_date": "Date d'émission",
-    "cert_year": "Année du certificat",
-    "status": "Statut",
-    "print_status": "Statut de l'impression",
-    "print_date": "Date d'impression",
-    "wef": "WEF",
-    "select_certifiactes": "Sélectionner les certificats",
-    "cert_type": "Type de certificat",
-    "lots_id": "ID des lots",
-    "certificate_details": "Détails du certificat",
-    "certificate": "Certificat",
-    "active": "Actif",
-    "cancelled": "Annulé",
-    "inactive": "Inactif",
-    "wet": "Mouillé",
-    "remark": "Remarque",
-    "created_date": "Date de création",
-    "add_remarks": "Ajouter des remarques",
-    "edit_remarks": "Modifier les remarques",
-    "related_risks": "Risques associés",
-    "property_id": "ID de la propriété",
-    "commission_transaction": "Transaction de commission",
-    "agent_name": "Nom de l'agent",
-    "account_type": "Type de compte",
-    "setup_rate": "Taux d'installation",
-    "used_rate": "Taux utilisé",
-    "commission_amount": "Montant de la commission",
-    "withholding_rate": "Taux de retenue",
-    "code": "Code"
+      "select_required_documents": "Sélectionner les documents requis",
+      "edit_required_documents": "Modifier les documents requis",
+      "certificates": "Certificats",
+      "select_user_certifacte_iot": "Sélectionner le lot de certificats utilisateur",
+      "cert_no": "N° de certificat",
+      "lot_id": "ID du lot",
+      "issue_date": "Date d'émission",
+      "cert_year": "Année du certificat",
+      "status": "Statut",
+      "print_status": "Statut de l'impression",
+      "print_date": "Date d'impression",
+      "wef": "WEF",
+      "select_certifiactes": "Sélectionner les certificats",
+      "cert_type": "Type de certificat",
+      "lots_id": "ID des lots",
+      "certificate_details": "Détails du certificat",
+      "certificate": "Certificat",
+      "active": "Actif",
+      "cancelled": "Annulé",
+      "inactive": "Inactif",
+      "wet": "Mouillé",
+      "remark": "Remarque",
+      "created_date": "Date de création",
+      "add_remarks": "Ajouter des remarques",
+      "edit_remarks": "Modifier les remarques",
+      "related_risks": "Risques associés",
+      "property_id": "ID de la propriété",
+      "commission_transaction": "Transaction de commission",
+      "agent_name": "Nom de l'agent",
+      "account_type": "Type de compte",
+      "setup_rate": "Taux d'installation",
+      "used_rate": "Taux utilisé",
+      "commission_amount": "Montant de la commission",
+      "withholding_rate": "Taux de retenue",
+      "code": "Code"
     }
   },
   "lms": {
@@ -1492,7 +1499,6 @@
       "paymentType": "Type de paiement",
       "bankAccount": "Compte bancaire",
       "chequeNo": "N° de chèque",
-      "exciseDuty": "Droits d'accise",
       "payee": "Bénéficiaire",
       "paymentMode": "Mode de paiement",
       "authorised": "Autorisé",
