VQ-1768/Member portal UI fix and multilingual translation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1083,6 +1083,72 @@
       "outside_system": "Outside System"
     },
     "grp": {
+      "member_portal": {
+        "name": "Name",
+        "national_id": "National ID",
+        "phone_number": "Phone number",
+        "email": "Email",
+        "dashboard": "Dashboard",
+        "policies": "Policies",
+        "policy": "Policy",
+        "policy_number": "Policy Number",
+        "member_number": "Member number",
+        "sum_assured": "Sum assured",
+        "fund_value": "Fund value",
+        "cover_types": "Cover types",
+        "cover": "Cover",
+        "coverage_period": "Coverage period",
+        "transactions": "Transactions",
+        "pension_account_summary": "Pension account summary",
+        "investment_summary": "Investment summary",
+        "date_of_birth": "Date of birth",
+        "date_of_joining_scheme": "Date of joining scheme",
+        "years_to_retirement": "Years to retirement",
+        "employee_contribution": "Employee contribution",
+        "interest": "Interest",
+        "interim_interest_rate": "Interim interest rate",
+        "gender": "Gender",
+        "group": "Group",
+        "employer_contribution": "Employer contribution",
+        "annual_salary": "Annual salary",
+        "contribution": "Contribution",
+        "total_fund_value": "Total fund value",
+        "status": "Status",
+        "valuations": "Valuations",
+        "filter_by": "Filter by",
+        "year": "Year",
+        "period": "Period",
+        "balance_brought_forward": "Balance B/F",
+        "rate": "Rate",
+        "balance_carried_forward": "Balance C/F",
+        "download": "Download",
+        "valuations_report": "Valuations report",
+        "receipts": "Receipts",
+        "select_year": "Select year",
+        "select_month": "Select month",
+        "receipt_number": "Receipt number",
+        "date": "Date",
+        "voluntary_contribution": "Voluntary contribution",
+        "transfer_value": "Transfer value",
+        "severance": "Severance",
+        "account_total": "Account total",
+        "total_pension_account": "Total pension account",
+        "withdrawals": "Withdrawals",
+        "payment_method": "Payment method",
+        "bank": "Bank",
+        "account_number": "Account Number",
+        "payee": "Payee",
+        "amount": "Amount",
+        "receipt_summary": "Receipt summary",
+        "transfer_amount": "Transfer amount",
+        "annual_voluntary_contribution": "Annual voluntary contribution",
+        "cost_of_benefits": "Cost of benefits",
+        "total_contribution": "Total contribution",
+        "total_account_contributions": "Total account contributions",
+        "investment_summary_report": "Investment summary report",
+        "pension_account_summary_report": "Pension account summary report"
+
+      },
       "claims": {
         "claim_initiation": "Claim initiation",
         "select_a_product": "Select a product",
