--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1040,6 +1040,71 @@
       "yes": "Sí"
     },
     "grp": {
+      "member_portal": {
+        "name": "Nombre",
+        "national_id": "ID nacional",
+        "phone_number": "Número de teléfono",
+        "email": "Correo electrónico",
+        "dashboard": "Panel de control",
+        "policies": "Pólizas",
+        "policy": "Póliza",
+        "policy_number": "Número de póliza",
+        "member_number": "Número de miembro",
+        "sum_assured": "Suma asegurada",
+        "fund_value": "Valor del fondo",
+        "cover_types": "Tipos de cobertura",
+        "cover": "Cobertura",
+        "coverage_period": "Período de cobertura",
+        "transactions": "Transacciones",
+        "pension_account_summary": "Resumen de la cuenta de pensión",
+        "investment_summary": "Resumen de inversión",
+        "date_of_birth": "Fecha de nacimiento",
+        "date_of_joining_scheme": "Fecha de incorporación al plan",
+        "years_to_retirement": "Años para la jubilación",
+        "employee_contribution": "Contribución del empleado",
+        "interest": "Interés",
+        "interim_interest_rate": "Tasa de interés interina",
+        "gender": "Género",
+        "group": "Grupo",
+        "employer_contribution": "Contribución del empleador",
+        "annual_salary": "Salario anual",
+        "contribution": "Contribución",
+        "total_fund_value": "Valor total del fondo",
+        "status": "Estado",
+        "valuations": "Valuaciones",
+        "filter_by": "Filtrar por",
+        "year": "Año",
+        "period": "Período",
+        "balance_brought_forward": "Saldo inicial",
+        "rate": "Tasa",
+        "balance_carried_forward": "Saldo final",
+        "download": "Descargar",
+        "valuations_report": "Informe de valuaciones",
+        "receipts": "Recibos",
+        "select_year": "Seleccionar año",
+        "select_month": "Seleccionar mes",
+        "receipt_number": "Número de recibo",
+        "date": "Fecha",
+        "voluntary_contribution": "Contribución voluntaria",
+        "transfer_value": "Valor de transferencia",
+        "severance": "Indemnización",
+        "account_total": "Total de la cuenta",
+        "total_pension_account": "Cuenta total de pensión",
+        "withdrawals": "Retiros",
+        "payment_method": "Método de pago",
+        "bank": "Banco",
+        "account_number": "Número de cuenta",
+        "payee": "Beneficiario",
+        "amount": "Monto",
+        "receipt_summary": "Resumen de recibos",
+        "transfer_amount": "Monto de transferencia",
+        "annual_voluntary_contribution": "Contribución voluntaria anual",
+        "cost_of_benefits": "Costo de los beneficios",
+        "total_contribution": "Contribución total",
+        "total_account_contributions": "Contribuciones totales de la cuenta",
+        "investment_summary_report": "Informe de resumen de inversiones",
+        "pension_account_summary_report": "Informe de resumen de la cuenta de pensión"
+      },
       "claims": {
         "claim_initiation": "Inicio de reclamación",
         "select_a_product": "Seleccionar un producto",
