--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1040,6 +1040,71 @@
       "yes": "Oui"
     },
     "grp": {
+      "member_portal": {
+        "name": "Nom",
+        "national_id": "ID national",
+        "phone_number": "Numéro de téléphone",
+        "email": "Email",
+        "dashboard": "Tableau de bord",
+        "policies": "Polices",
+        "policy": "Police",
+        "policy_number": "Numéro de police",
+        "member_number": "Numéro de membre",
+        "sum_assured": "Capital assuré",
+        "fund_value": "Valeur du fonds",
+        "cover_types": "Types de couverture",
+        "cover": "Couverture",
+        "coverage_period": "Période de couverture",
+        "transactions": "Transactions",
+        "pension_account_summary": "Résumé du compte de pension",
+        "investment_summary": "Résumé des investissements",
+        "date_of_birth": "Date de naissance",
+        "date_of_joining_scheme": "Date d'adhésion au régime",
+        "years_to_retirement": "Années jusqu'à la retraite",
+        "employee_contribution": "Contribution de l'employé",
+        "interest": "Intérêt",
+        "interim_interest_rate": "Taux d'intérêt intérimaire",
+        "gender": "Genre",
+        "group": "Groupe",
+        "employer_contribution": "Contribution de l'employeur",
+        "annual_salary": "Salaire annuel",
+        "contribution": "Contribution",
+        "total_fund_value": "Valeur totale du fonds",
+        "status": "Statut",
+        "valuations": "Évaluations",
+        "filter_by": "Filtrer par",
+        "year": "Année",
+        "period": "Période",
+        "balance_brought_forward": "Solde reporté",
+        "rate": "Taux",
+        "balance_carried_forward": "Solde à reporter",
+        "download": "Télécharger",
+        "valuations_report": "Rapport d'évaluation",
+        "receipts": "Reçus",
+        "select_year": "Sélectionner l'année",
+        "select_month": "Sélectionner le mois",
+        "receipt_number": "Numéro de reçu",
+        "date": "Date",
+        "voluntary_contribution": "Contribution volontaire",
+        "transfer_value": "Valeur du transfert",
+        "severance": "Indemnité de départ",
+        "account_total": "Total du compte",
+        "total_pension_account": "Total du compte de pension",
+        "withdrawals": "Retraits",
+        "payment_method": "Mode de paiement",
+        "bank": "Banque",
+        "account_number": "Numéro de compte",
+        "payee": "Bénéficiaire",
+        "amount": "Montant",
+        "receipt_summary": "Résumé des reçus",
+        "transfer_amount": "Montant du transfert",
+        "annual_voluntary_contribution": "Contribution volontaire annuelle",
+        "cost_of_benefits": "Coût des avantages",
+        "total_contribution": "Contribution totale",
+        "total_account_contributions": "Contributions totales du compte",
+        "investment_summary_report": "Rapport de synthèse des investissements",
+        "pension_account_summary_report": "Rapport de synthèse du compte de pension"
+      },
       "claims": {
         "claim_initiation": "Début de la réclamation",
         "select_a_product": "Sélectionner un produit",
