VQ-2913:Ability to Add Exchange Rate Field When Yes is Selected for Currency Rate

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1136,7 +1136,8 @@
       "check_off_installments": "Check-off installments",
       "transaction_type": "Transaction Type",
       "client_information": "Client information",
-      "commission": "Commission"
+      "commission": "Commission",
+      "exchange_rate": "Exchange rate"
 
     },
     "claims": {
